; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sbni/extr_if_sbni.c_sbni_outsb.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sbni/extr_if_sbni.c_sbni_outsb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sbni_softc = type { i64, i32 }

@DAT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sbni_softc*, i32*, i32)* @sbni_outsb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sbni_outsb(%struct.sbni_softc* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.sbni_softc*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.sbni_softc* %0, %struct.sbni_softc** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.sbni_softc*, %struct.sbni_softc** %4, align 8
  %8 = getelementptr inbounds %struct.sbni_softc, %struct.sbni_softc* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @rman_get_bustag(i32 %9)
  %11 = load %struct.sbni_softc*, %struct.sbni_softc** %4, align 8
  %12 = getelementptr inbounds %struct.sbni_softc, %struct.sbni_softc* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @rman_get_bushandle(i32 %13)
  %15 = load %struct.sbni_softc*, %struct.sbni_softc** %4, align 8
  %16 = getelementptr inbounds %struct.sbni_softc, %struct.sbni_softc* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @DAT, align 8
  %19 = add nsw i64 %17, %18
  %20 = load i32*, i32** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @bus_space_write_multi_1(i32 %10, i32 %14, i64 %19, i32* %20, i32 %21)
  ret void
}

declare dso_local i32 @bus_space_write_multi_1(i32, i32, i64, i32*, i32) #1

declare dso_local i32 @rman_get_bustag(i32) #1

declare dso_local i32 @rman_get_bushandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
